--- a/src/less/main_momo.less
+++ b/src/less/main_momo.less
@@ -16,8 +16,8 @@
 /*header end*/
 
 /*main*/
-.main{background:rgba(250, 250, 251, 1);padding: 26px 0 40px}
-.main>div{margin-bottom: 15px}
+.body{background:rgba(250, 250, 251, 1);padding: 26px 0 40px}
+.body>div{margin-bottom: 15px}
 .user_info{width: 1200px;height: 142px;margin: 0 auto;padding: 24px 0;background:rgba(255, 255, 255, 1);-webkit-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.05);box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.05);border-radius:8px;}
 .user_info>ul{width: 100%;height: 100%}
 .user_info>ul>li{width: 339px;height: 100%;float: left;border-right:1px solid rgba(235, 235, 235, 1);padding: 0 30px;}
