--- a/src/css/main_momo.css
+++ b/src/css/main_momo.css
@@ -67,6 +67,7 @@
 .course_list_details_list{width: 252px;}
 .course_list_details_list>.active{background:rgba(255, 255, 255, 1);font-size: 16px;color:rgba(0, 133, 230, 1);}
 .course_list_details_list>p{width: 100%;height: 44px;background:rgba(251, 251, 251, 1);font-size:14px;color:rgba(153, 153, 153, 1);line-height: 44px;text-align: center;cursor: pointer}
+.course_list_details_list>p:last-of-type{border-radius:0 0 0 8px;}
 .course_list_details_list>p:hover{background:rgba(255, 255, 255, 1);font-size: 16px;color:rgba(0, 133, 230, 1);}
 .course_list_details{position: relative}
 .course_list_details_show{width: 948px;height: 264px;display: none}
