--- a/src/css/main_momo.css
+++ b/src/css/main_momo.css
@@ -1,6 +1,7 @@
-/*[{"source":"E:\\develop\\parttime-zxf-master\\src\\less\\main_momo.less","deprecations":[],"invalidOptionWarnings":[],"parseErrors":[],"errored":true,"warnings":[{"line":1,"column":1,"rule":"CssSyntaxError","severity":"error","text":"Unknown word (CssSyntaxError)"}]}]*/
+@charset "UTF-8";
+/* stylelint-disable no-descending-specificity */
 
-/*header*/
+/* header */
 .momo_index {
   width: 100%;
   background: rgba(250, 250, 251, 1);
@@ -80,9 +81,9 @@
   height: 100%;
 }
 
-/*header end*/
+/* header end */
 
-/*main*/
+/* main */
 .body {
   background: rgba(250, 250, 251, 1);
   padding: 26px 0 40px;
@@ -680,3 +681,4 @@
 .leftButton {
   margin: 0;
 }
+/* stylelint-enable */
