--- a/src/less/main_momo.less
+++ b/src/less/main_momo.less
@@ -29,7 +29,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: url(../img/index/logo@2x.png);
+  background: url(../img/index/logo.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -59,7 +59,7 @@
   color: rgba(200, 204, 207, 1);
   text-align: right;
   line-height: 80px;
-  background-image: url(../img/index/%E8%B5%84%E6%BA%90%2050@2x@2x.png);
+  background-image: url(../img/index/head_portrait.png);
   background-size: 36px 36px;
   background-repeat: no-repeat;
   background-position: left center;
@@ -145,7 +145,7 @@
 .user_info_title > .user_info_title_pic {
   width: 46px;
   height: 100%;
-  background-image: url(../img/index/%E8%B5%84%E6%BA%90%2050@2x1@2x.png);
+  background-image: url(../img/index/head_portrait_l.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -174,15 +174,15 @@
 }
 
 .user_info_details > div:nth-of-type(1) > .user_info_details_icon {
-  background-image: url(../img/index/Rectangle@2x.png);
+  background-image: url(../img/index/Rectangle.png);
 }
 
 .user_info_details > div:nth-of-type(2) > .user_info_details_icon {
-  background-image: url(../img/index/Rectangle%20Copy@2x.png);
+  background-image: url(../img/index/Rectangle_Copy.png);
 }
 
 .user_info_details > div:nth-of-type(3) > .user_info_details_icon {
-  background-image: url(../img/index/Rectangle%20Copy%202@2x.png);
+  background-image: url(../img/index/Rectangle_Copy_Copy.png);
 }
 
 .user_info_details .user_info_details_num {
@@ -218,11 +218,11 @@
 }
 
 .user_info li:nth-of-type(2) .user_info_title_icon {
-  background-image: url(../img/index/Rectangle%2010@2x.png);
+  background-image: url(../img/index/book.png);
 }
 
 .user_info li:nth-of-type(3) .user_info_title_icon {
-  background-image: url(../img/index/Rectangle%2010%20Copy@2x.png);
+  background-image: url(../img/index/badge.png);
 }
 
 .user_info_title > .user_info_title_heading {
@@ -254,7 +254,7 @@
   width: 56px;
   height: 75px;
   margin-right: 20px;
-  background-image: url(../img/index/Group%204@2x.png);
+  background-image: url(../img/index/badge_l.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
@@ -351,7 +351,7 @@
   width: 15px;
   height: 100%;
   margin-right: 2px;
-  background-image: url(../img/index/Combined%20Shape@2x.png);
+  background-image: url(../img/index/renew.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
@@ -433,19 +433,19 @@
 }
 
 .course_list_details li:nth-last-of-type(1) > .course_list_details_icon {
-  background-image: url(../img/index/Oval@2x.png);
+  background-image: url(../img/index/Oval_f.png);
 }
 
 .course_list_details li:nth-last-of-type(2) > .course_list_details_icon {
-  background-image: url(../img/index/Oval1@2x.png);
+  background-image: url(../img/index/Oval_s.png);
 }
 
 .course_list_details li:nth-last-of-type(3) > .course_list_details_icon {
-  background-image: url(../img/index/Oval%202@2x.png);
+  background-image: url(../img/index/Oval_t.png);
 }
 
 .course_list_details li:nth-last-of-type(4) > .course_list_details_icon {
-  background-image: url(../img/index/Oval%2021@2x.png);
+  background-image: url(../img/index/Oval_fo.png);
 }
 
 .course_list_details_explan {
@@ -503,7 +503,7 @@
   margin-right: 9px;
   border-radius: 50%;
   background-color: rgba(0, 133, 230, 1);
-  background-image: url(../img/index/Group%2020@2x.png);
+  background-image: url(../img/index/check_mark.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
@@ -647,15 +647,15 @@
 }
 
 .course_ongoing_explan_icon1 {
-  background-image: url(../img/index/Oval%20Copy@2x.png);
+  background-image: url(../img/index/Oval_Copy_f.png);
 }
 
 .course_ongoing_explan_icon2 {
-  background-image: url(../img/index/Oval%20Copy1@2x.png);
+  background-image: url(../img/index/Oval_Copy_s.png);
 }
 
 .course_ongoing_explan_icon3 {
-  background-image: url(../img/index/Oval%20Copy2@2x.png);
+  background-image: url(../img/index/Oval_Copy_t.png);
 }
 
 .course_ongoing_explan_left > p {
