--- a/src/css/main_wj.css
+++ b/src/css/main_wj.css
@@ -37,7 +37,7 @@ button:focus {
     border-radius: 23px;
     font-size: 16px;
     color: #999;
-    margin-left: 21px;
+    margin-left: 20px;
   }
 
 .body-login .none, .body-register .none {
@@ -165,6 +165,7 @@ button:focus {
 
 .footer .footer-ct {
     width: 1200px;
+    margin: 0 auto;
   }
 
 .footer .tel-wp {
