--- a/src/less/main_wj.less
+++ b/src/less/main_wj.less
@@ -38,7 +38,7 @@ button {
     border-radius: 23px;
     font-size: 16px;
     color: #999;
-    margin-left: 21px;
+    margin-left: 20px;
   }
 }
 
@@ -165,6 +165,7 @@ button {
 
   .footer-ct {
     width: 1200px;
+    margin: 0 auto;
   }
 
   .tel-wp {
