--- a/src/less/main_wj.less
+++ b/src/less/main_wj.less
@@ -203,3 +203,182 @@ button {
     text-align: center;
   }
 }
+
+.body-myclass {
+  .head-wp {
+    width: 1200px;
+    height: 98px;
+    line-height: 98px;
+    background: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+    border-radius: 8px;
+    margin: 0 auto 15px;
+  }
+
+  .hd-icon {
+    width: 34px;
+    margin-left: 30px;
+    margin-right: 4px;
+  }
+
+  .myclass {
+    font-size: 16px;
+    color: #333;
+    margin-right: 30px;
+  }
+
+  .schoolname,
+  .ads {
+    font-size: 14px;
+    color: #666;
+  }
+
+  .ads {
+    margin-right: 10px;
+  }
+
+  .grade {
+    font-size: 14px;
+    color: #333;
+  }
+
+  .hd-left {
+    float: left;
+  }
+
+  .hd-right {
+    float: right;
+    margin-right: 80px;
+  }
+
+  .line {
+    display: inline-block;
+    height: 50px;
+    border-left: 1px solid #ebebeb;
+    margin-right: 30px;
+  }
+
+  .headmaster-icon {
+    width: 46px;
+    margin-right: 10px;
+  }
+
+  .headmaster-title {
+    font-size: 16px;
+    color: #333;
+    line-height: 1;
+    margin-bottom: 10px;
+  }
+
+  .headmaser-name {
+    font-size: 14px;
+    color: #666;
+    line-height: 1;
+  }
+
+  .headmaster-wp,
+  .line,
+  .headmaster-icon {
+    float: left;
+    position: relative;
+    top: 24px;
+  }
+
+  .class-table-wp {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+  .table-hd {
+    font-size: 20px;
+    color: #fff;
+    height: 50px;
+    line-height: 50px;
+    background: #1393f0;
+    border-radius: 8px 8px 0 0;
+    text-indent: 30px;
+  }
+
+  th {
+    font-weight: normal;
+    color: #666;
+    font-size: 16px;
+    height: 50px;
+
+    &:nth-of-type(1) {
+      width: 146px;
+    }
+
+    &:nth-of-type(2) {
+      width: 184px;
+    }
+
+    &:nth-of-type(3) {
+      width: 146px;
+    }
+
+    &:nth-of-type(4) {
+      width: 146px;
+    }
+
+    &:nth-of-type(5) {
+      width: 146px;
+    }
+
+    &:nth-of-type(6) {
+      width: 146px;
+    }
+
+    &:nth-of-type(7) {
+      width: 146px;
+    }
+
+    &:nth-of-type(8) {
+      width: 146px;
+    }
+  }
+
+  .class-table {
+    background: #fff;
+
+    tr {
+      &:nth-of-type(odd) {
+        background: #fbfbfb;
+      }
+
+      &:nth-of-type(even) {
+        background: #fff;
+      }
+    }
+  }
+
+  .schoolmate {
+    width: 36px;
+  }
+
+  td {
+    font-size: 14px;
+    color: #666;
+    text-align: center;
+  }
+
+  .lv {
+    display: inline-block;
+    width: 60px;
+    height: 20px;
+    font-size: 14px;
+    background: #0085e6;
+    color: #fff;
+    text-align: center;
+    line-height: 20px;
+    border-radius: 10px;
+  }
+
+  .integral {
+    color: #eeb843;
+  }
+
+  .ranking {
+    color: #338bcb;
+  }
+}
