--- a/src/less/main_wj.less
+++ b/src/less/main_wj.less
@@ -66,7 +66,7 @@ button {
   .register-ct {
     width: 1200px;
     height: 680px;
-    background: url('../../img/login_bg.png') no-repeat;
+    background: url('../img/login_bg.png') no-repeat;
     background-size: cover;
     margin: 0 auto;
     position: relative;
