--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -1,5 +1,200 @@
 @charset "UTF-8";
 
-body {
-  color: #000;
+.xc-brand {
+  font-size: 14px;
+  line-height: 20px;
+  padding: 20px 0 14px 26px;
+  color: #333;
+
+  .link {
+    color: #999;
+  }
+
+  .line {
+    font-style: normal;
+    padding: 5px;
+    color: #999;
+  }
+}
+
+.xc-table {
+  font-size: 14px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  border-radius: 8px 8px 8px 8px;
+  overflow: hidden;
+  box-shadow: 0 0 7px 1px rgb(235, 235, 235);
+
+  thead {
+    background-color: #0085e6;
+  }
+
+  th {
+    color: rgba(251, 251, 251, 1);
+    line-height: 20px;
+    margin: 0;
+    padding: 15px 0;
+    font-weight: normal;
+  }
+
+  tbody {
+    color: #666;
+    text-align: center;
+
+    tr {
+      height: 48px;
+    }
+
+    td {
+      .table-btn {
+        display: inline-block;
+        padding: 5px 15px;
+        border-radius: 15px;
+        background-color: #0085e6;
+        border-radius: 15px;
+        color: #fff;
+      }
+    }
+
+    tr:nth-child(2n+1) {
+      background-color: #fff;
+    }
+  }
+}
+
+.xc-paging-box {
+  margin: 25px auto 45px;
+  text-align: center;
+  color: #999;
+  font-size: 0;
+
+  span {
+    font-size: 14px;
+  }
+
+  .xc-paging {
+    display: inline-block;
+
+    .page {
+      margin-right: 5px;
+      display: inline-block;
+      line-height: 28px;
+      height: 28px;
+      padding: 0 5px;
+      min-width: 28px;
+      box-sizing: border-box;
+      border-radius: 4px;
+      border: 1px solid rgba(235, 235, 235, 1);
+      background-color: rgba(255, 255, 255, 1);
+
+      &.active {
+        color: #0085e6;
+        border-color: #0085e6;
+      }
+
+      img {
+        width: 6px;
+        vertical-align: top;
+        margin-top: 8px;
+      }
+    }
+  }
+
+  .pages,
+  .pages-num,
+  .pages-go,
+  .page-btn {
+    font-size: 14px;
+    display: inline-block;
+  }
+
+  .pages-num {
+    margin: 0 10px;
+
+    span {
+      margin: 0 6px;
+    }
+  }
+
+  .pages-go {
+    margin: 0 10px;
+
+    input {
+      line-height: 24px;
+      border-radius: 4px;
+      border: 1px solid rgba(235, 235, 235, 1);
+      width: 28px;
+      text-align: center;
+      box-sizing: border-box;
+      margin: 0 6px;
+    }
+  }
+
+  .page-btn {
+    padding: 0 5px;
+    line-height: 28px;
+    border-radius: 4px;
+    border: 1px solid rgba(235, 235, 235, 1);
+  }
+}
+
+.xc-body {
+  color: #999;
+  font-size: 16px;
+
+  .xc-container {
+    width: 1200px;
+    margin: 0 auto;
+  }
+
+  .test-main {
+    background-color: rgba(251, 251, 251, 1);
+
+    .test-nav {
+      font-size: 18px;
+      background-color: #fff;
+      border-radius: 8px;
+      margin-bottom: 16px;
+
+      ul {
+        overflow: hidden;
+        display: flex;
+        padding-left: 33px;
+        position: relative;
+
+        li {
+          width: 79px;
+          line-height: 25px;
+          padding: 27px 0;
+          text-align: center;
+          margin-right: 46px;
+          cursor: pointer;
+
+          &.active {
+            color: #0085e6;
+          }
+        }
+
+        .line {
+          display: inline-block;
+          width: 79px;
+          height: 3px;
+          background-color: #0085e6;
+          border-radius: 3px;
+          position: absolute;
+          transition: all 0.2s linear;
+          left: 33px;
+          bottom: 0;
+        }
+      }
+    }
+
+    .test-item {
+      display: none;
+
+      &.active {
+        display: block;
+      }
+    }
+  }
 }
