--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -23,7 +23,7 @@
   border-spacing: 0;
   border-radius: 8px 8px 8px 8px;
   overflow: hidden;
-  box-shadow: 0 0 7px 1px rgb(235, 235, 235);
+  box-shadow: 0 3px 7px 1px rgb(235, 235, 235);
 
   thead {
     background-color: #0085e6;
@@ -46,6 +46,12 @@
     }
 
     td {
+      border-right: 1px solid rgba(235, 235, 235, 1);
+
+      &.red {
+        color: #ff4548;
+      }
+
       .table-btn {
         display: inline-block;
         padding: 5px 15px;
@@ -53,11 +59,38 @@
         background-color: #0085e6;
         border-radius: 15px;
         color: #fff;
+        cursor: pointer;
+
+        &.mini {
+          font-size: 10px;
+          padding: 4px 10px;
+          border-radius: 10px;
+          margin-left: 15px;
+        }
+
+        &.red {
+          background-color: rgba(255, 69, 72, 1);
+          color: #fff;
+        }
       }
     }
 
     tr:nth-child(2n+1) {
       background-color: #fff;
+    }
+  }
+
+  &.task-table {
+    border-radius: 0 0 8px 8px;
+
+    thead {
+      background-color: transparent;
+    }
+
+    th {
+      color: #666;
+      font-size: 14px;
+      font-weight: 600;
     }
   }
 }
@@ -86,6 +119,7 @@
       border-radius: 4px;
       border: 1px solid rgba(235, 235, 235, 1);
       background-color: rgba(255, 255, 255, 1);
+      cursor: pointer;
 
       &.active {
         color: #0085e6;
@@ -135,6 +169,7 @@
     line-height: 28px;
     border-radius: 4px;
     border: 1px solid rgba(235, 235, 235, 1);
+    cursor: pointer;
   }
 }
 
@@ -147,7 +182,7 @@
     margin: 0 auto;
   }
 
-  .test-main {
+  .main {
     background-color: rgba(251, 251, 251, 1);
 
     .test-nav {
@@ -195,6 +230,21 @@
       &.active {
         display: block;
       }
+    }
+  }
+
+  .task-main {
+    h2 {
+      padding: 0;
+      margin: 0;
+      line-height: 50px;
+      border-radius: 8px 8px 0 0;
+      overflow: hidden;
+      padding-left: 30px;
+      font-size: 20px;
+      color: #fff;
+      background-color: #0085e6;
+      font-weight: 600;
     }
   }
 }
