--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -17,6 +17,123 @@
     color: #999;
   }
 
+.xc-head {
+  font-size: 14px;
+  padding: 16px 30px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+  margin-bottom: 15px;
+  border-radius: 8px;
+  color: #999;
+}
+
+.xc-head .xc-head-top {
+    overflow: hidden;
+    line-height: 36px;
+  }
+
+.xc-head .xc-head-top .xc-head-name {
+      color: #0085e6;
+      font-size: 20px;
+      font-weight: bold;
+      float: left;
+    }
+
+.xc-head .xc-head-top .xc-head-unit {
+      float: left;
+      margin-left: 30px;
+      padding-left: 30px;
+      border-left: 1px solid rgba(235, 235, 235, 1);
+    }
+
+.xc-head .xc-head-top .xc-head-unit .xc-head-select {
+        display: inline-block;
+        line-height: 34px;
+        border: 1px solid rgba(235, 235, 235, 1);
+        width: 90px;
+        padding: 0 15px;
+        border-radius: 18px;
+        margin-left: 10px;
+        position: relative;
+        cursor: pointer;
+      }
+
+.xc-head .xc-head-top .xc-head-unit .xc-head-select .xc-head-selectImg {
+          position: absolute;
+          right: 10px;
+          top: 13px;
+          width: 12px;
+        }
+
+.xc-head .xc-head-top .return {
+      float: right;
+      display: inline-block;
+      padding-left: 30px;
+      border-left: rgba(235, 235, 235, 1) 1px solid;
+      color: #0085e6;
+    }
+
+.xc-head .xc-head-bottom {
+    overflow: hidden;
+    margin-top: 15px;
+  }
+
+.xc-head .xc-head-bottom .xc-head-categories {
+      line-height: 20px;
+    }
+
+.xc-head .xc-head-bottom .xc-head-categories .xc-head-category {
+        float: left;
+      }
+
+.xc-head .xc-head-bottom .xc-head-categories .circle {
+        vertical-align: top;
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        border: 1px solid rgba(235, 235, 235, 1);
+        margin-right: 10px;
+        margin-top: 1px;
+        cursor: pointer
+      }
+
+.xc-head .xc-head-bottom .xc-head-categories .circle.active {
+  border-color: #0085e6;
+  background-color: #0085e6;
+  position: relative;
+}
+
+.xc-head .xc-head-bottom .xc-head-categories .circle.active::after {
+  content: "";
+  display: inline-block;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 111;
+  background-color: #fff;
+}
+
+.xc-head .xc-head-bottom .xc-head-categories .number {
+        color: #333;
+        margin: 0 20px 0 5px;
+        font-weight: 600
+      }
+
+.xc-head .xc-head-bottom .xc-head-categories .number.per {
+  color: #0085e6;
+}
+
+.xc-table-box {
+  margin: 15px 0 50px 0;
+}
+
 .xc-table {
   font-size: 14px;
   border-collapse: collapse;
@@ -37,7 +154,46 @@
     margin: 0;
     padding: 15px 0;
     font-weight: normal;
+    position: relative;
   }
+
+.xc-table th .table-switch {
+      position: absolute;
+      display: inline-block;
+      right: 30px;
+      cursor: pointer;
+    }
+
+.xc-table th .table-switch .table-switch-warp {
+        background-color: rgba(235, 235, 235, 1);
+        height: 16px;
+        width: 30px;
+        float: left;
+        vertical-align: top;
+        border-radius: 8px;
+        margin-right: 10px;
+        margin-top: 2px;
+        position: relative;
+      }
+
+.xc-table th .table-switch .table-switch-warp .table-switch-inner {
+          width: 16px;
+          height: 16px;
+          border-radius: 50%;
+          background-color: #fff;
+          position: absolute;
+          left: 0;
+          -webkit-transition: all 0.2s linear;
+          transition: all 0.2s linear;
+        }
+
+.xc-table th .table-switch.active .table-switch-warp {
+          background-color: #48d8bd;
+}
+
+.xc-table th .table-switch.active .table-switch-inner {
+          left: 14px;
+}
 
 .xc-table tbody {
     color: #666;
@@ -94,6 +250,7 @@
       color: #666;
       font-size: 14px;
       font-weight: 600;
+      border-right: 1px solid rgba(235, 235, 235, 1);
 }
 
 .xc-paging-box {
@@ -252,3 +409,232 @@
       background-color: #0085e6;
       font-weight: 600;
     }
+
+.xc-body .course-main .course-btn {
+      padding: 5px 10px;
+      color: #fff;
+      background-color: #0085e6;
+      border-radius: 15px;
+      line-height: 20px;
+    }
+
+.xc-body .course-main .course-head {
+      font-size: 14px;
+      padding: 16px 30px;
+      background-color: #fff;
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+              box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+      margin-bottom: 15px;
+      border-radius: 8px;
+      color: #999;
+    }
+
+.xc-body .course-main .course-head .course-head-top {
+        line-height: 28px;
+        overflow: hidden;
+      }
+
+.xc-body .course-main .course-head .course-head-top .course-head-name {
+          color: #0085e6;
+          font-size: 20px;
+          font-weight: bold;
+          display: inline-block;
+          float: left;
+        }
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes {
+          margin-left: 15px;
+          overflow: hidden;
+          display: inline-block;
+          float: left;
+        }
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes img {
+            width: 20px;
+            margin-top: -2px;
+          }
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li {
+            float: left;
+            cursor: pointer
+          }
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li:first-child {
+  padding-right: 20px;
+  border-right: 1px solid rgba(235, 235, 235, 1);
+  color: #6dbbf4;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li:first-child img {
+                margin-right: 5px;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li:last-child {
+  padding-left: 20px;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li:last-child span {
+                margin-top: 2px;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-classes li:last-child span::after {
+                display: inline-block;
+                width: 0;
+                height: 0;
+                border-left: 10px solid #d8d8d8;
+                border-top: 6px solid transparent;
+                border-bottom: 6px solid transparent;
+                content: "";
+                margin: 3px 0 0 5px;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-types {
+          display: inline-block;
+          float: right;
+        }
+
+.xc-body .course-main .course-head .course-head-top .course-head-types .course-head-type {
+            display: inline-block;
+            padding: 0 26px
+          }
+
+.xc-body .course-main .course-head .course-head-top .course-head-types .course-head-type.active {
+  color: #0085e6;
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-types .course-head-type + .course-head-type {
+  border-left: 1px solid rgba(235, 235, 235, 1);
+}
+
+.xc-body .course-main .course-head .course-head-top .course-head-types .course-head-type:last-child {
+  padding-right: 0;
+}
+
+.xc-body .course-main .course-head .course-head-bottom {
+        overflow: hidden;
+        margin-top: 17px;
+      }
+
+.xc-body .course-main .course-head .course-head-bottom .course-head-courses {
+          display: inline-block;
+          float: left;
+        }
+
+.xc-body .course-main .course-head .course-head-bottom .course-head-courses .course-head-course {
+            display: inline-block;
+            line-height: 24px;
+            padding: 0 10px;
+            border-radius: 12px;
+            border: 1px solid #fff
+          }
+
+.xc-body .course-main .course-head .course-head-bottom .course-head-courses .course-head-course.active {
+  color: #0085e6;
+  border-color: #0085e6;
+}
+
+.xc-body .course-main .course-head .course-head-bottom .course-btn {
+          float: right;
+        }
+
+.xc-body .course-main .course-body {
+      -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+              box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+      margin-bottom: 15px;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+.xc-body .course-main .course-body .course-body-left {
+        width: 280px;
+        float: left;
+        color: #666;
+      }
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-name {
+          float: left;
+        }
+
+.xc-body .course-main .course-body .course-body-left .course-body-untiy {
+          line-height: 20px;
+          padding: 15px 30px;
+          overflow: hidden;
+          height: 20px
+        }
+
+.xc-body .course-main .course-body .course-body-left .course-body-untiy:nth-child(2n + 2) {
+  background-color: #fff;
+}
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs {
+          font-size: 0;
+          float: right;
+        }
+
+.xc-body .course-main .course-body .course-body-left .course-untiy-imgs .img {
+            width: 18px;
+            height: 18px;
+            border-radius: 50%;
+            background-color: #0085e6;
+            display: inline-block;
+            margin-left: 10px;
+          }
+
+.xc-body .course-main .course-body .course-body-center {
+        float: left;
+        width: 612px;
+      }
+
+.xc-body .course-main .course-body .course-body-center .course-body-class {
+          padding: 0 43px;
+          float: left;
+        }
+
+.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item {
+            color: #333;
+            font-size: 16px;
+            line-height: 22px;
+            margin-bottom: 20px;
+          }
+
+.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-name {
+              margin-bottom: 11px;
+            }
+
+.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-pro {
+              display: table-cell;
+              overflow: hidden;
+              text-align: center;
+              font-size: 12px;
+              width: 220px;
+            }
+
+.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-pro .course-pro-warp {
+                width: 180px;
+                height: 6px;
+                background-color: #e5e5e5;
+                float: left;
+                border-radius: 6px;
+                margin-top: 6px;
+              }
+
+.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-pro .course-pro-warp .course-pro-inner {
+                  height: 100%;
+                  border-radius: 6px;
+                  width: 71.42%;
+                  background-color: #0085e6;
+                }
+
+.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-pro .course-pro-test {
+                float: right;
+                line-height: 17px;
+              }
+
+.xc-body .course-main .course-body .course-body-center .course-body-class .course-class-item .course-class-pro .course-pro-test span {
+                  color: #0085e6;
+                }
+
+.xc-body .course-main .course-body .course-body-right {
+        width: 308px;
+        float: left;
+      }
