--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -17,6 +17,121 @@
   }
 }
 
+.xc-head {
+  font-size: 14px;
+  padding: 16px 30px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+  margin-bottom: 15px;
+  border-radius: 8px;
+  color: #999;
+
+  .xc-head-top {
+    overflow: hidden;
+    line-height: 36px;
+
+    .xc-head-name {
+      color: #0085e6;
+      font-size: 20px;
+      font-weight: bold;
+      float: left;
+    }
+
+    .xc-head-unit {
+      float: left;
+      margin-left: 30px;
+      padding-left: 30px;
+      border-left: 1px solid rgba(235, 235, 235, 1);
+
+      .xc-head-select {
+        display: inline-block;
+        line-height: 34px;
+        border: 1px solid rgba(235, 235, 235, 1);
+        width: 90px;
+        padding: 0 15px;
+        border-radius: 18px;
+        margin-left: 10px;
+        position: relative;
+        cursor: pointer;
+
+        .xc-head-selectImg {
+          position: absolute;
+          right: 10px;
+          top: 13px;
+          width: 12px;
+        }
+      }
+    }
+
+    .return {
+      float: right;
+      display: inline-block;
+      padding-left: 30px;
+      border-left: rgba(235, 235, 235, 1) 1px solid;
+      color: #0085e6;
+    }
+  }
+
+  .xc-head-bottom {
+    overflow: hidden;
+    margin-top: 15px;
+
+    .xc-head-categories {
+      line-height: 20px;
+
+      .xc-head-category {
+        float: left;
+      }
+
+      .circle {
+        vertical-align: top;
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        border: 1px solid rgba(235, 235, 235, 1);
+        margin-right: 10px;
+        margin-top: 1px;
+        cursor: pointer;
+
+        &.active {
+          border-color: #0085e6;
+          background-color: #0085e6;
+          position: relative;
+
+          &::after {
+            content: "";
+            display: inline-block;
+            width: 4px;
+            height: 4px;
+            border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 111;
+            background-color: #fff;
+          }
+        }
+      }
+
+      .number {
+        color: #333;
+        margin: 0 20px 0 5px;
+        font-weight: 600;
+
+        &.per {
+          color: #0085e6;
+        }
+      }
+    }
+  }
+}
+
+.xc-table-box {
+  margin: 15px 0 50px 0;
+}
+
 .xc-table {
   font-size: 14px;
   border-collapse: collapse;
@@ -35,6 +150,46 @@
     margin: 0;
     padding: 15px 0;
     font-weight: normal;
+    position: relative;
+
+    .table-switch {
+      position: absolute;
+      display: inline-block;
+      right: 30px;
+      cursor: pointer;
+
+      .table-switch-warp {
+        background-color: rgba(235, 235, 235, 1);
+        height: 16px;
+        width: 30px;
+        float: left;
+        vertical-align: top;
+        border-radius: 8px;
+        margin-right: 10px;
+        margin-top: 2px;
+        position: relative;
+
+        .table-switch-inner {
+          width: 16px;
+          height: 16px;
+          border-radius: 50%;
+          background-color: #fff;
+          position: absolute;
+          left: 0;
+          transition: all 0.2s linear;
+        }
+      }
+
+      &.active {
+        .table-switch-warp {
+          background-color: #48d8bd;
+        }
+
+        .table-switch-inner {
+          left: 14px;
+        }
+      }
+    }
   }
 
   tbody {
@@ -91,6 +246,7 @@
       color: #666;
       font-size: 14px;
       font-weight: 600;
+      border-right: 1px solid rgba(235, 235, 235, 1);
     }
   }
 }
@@ -245,6 +401,235 @@
       color: #fff;
       background-color: #0085e6;
       font-weight: 600;
+    }
+  }
+
+  .course-main {
+    .course-btn {
+      padding: 5px 10px;
+      color: #fff;
+      background-color: #0085e6;
+      border-radius: 15px;
+      line-height: 20px;
+    }
+
+    .course-head {
+      font-size: 14px;
+      padding: 16px 30px;
+      background-color: #fff;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+      margin-bottom: 15px;
+      border-radius: 8px;
+      color: #999;
+
+      .course-head-top {
+        line-height: 28px;
+        overflow: hidden;
+
+        .course-head-name {
+          color: #0085e6;
+          font-size: 20px;
+          font-weight: bold;
+          display: inline-block;
+          float: left;
+        }
+
+        .course-head-classes {
+          margin-left: 15px;
+          overflow: hidden;
+          display: inline-block;
+          float: left;
+
+          img {
+            width: 20px;
+            margin-top: -2px;
+          }
+
+          li {
+            float: left;
+            cursor: pointer;
+
+            &:first-child {
+              padding-right: 20px;
+              border-right: 1px solid rgba(235, 235, 235, 1);
+              color: #6dbbf4;
+
+              img {
+                margin-right: 5px;
+              }
+            }
+
+            &:last-child {
+              padding-left: 20px;
+
+              span {
+                margin-top: 2px;
+              }
+
+              span::after {
+                display: inline-block;
+                width: 0;
+                height: 0;
+                border-left: 10px solid #d8d8d8;
+                border-top: 6px solid transparent;
+                border-bottom: 6px solid transparent;
+                content: "";
+                margin: 3px 0 0 5px;
+              }
+            }
+          }
+        }
+
+        .course-head-types {
+          display: inline-block;
+          float: right;
+
+          .course-head-type {
+            display: inline-block;
+            padding: 0 26px;
+
+            &.active {
+              color: #0085e6;
+            }
+
+            & + .course-head-type {
+              border-left: 1px solid rgba(235, 235, 235, 1);
+            }
+
+            &:last-child {
+              padding-right: 0;
+            }
+          }
+        }
+      }
+
+      .course-head-bottom {
+        overflow: hidden;
+        margin-top: 17px;
+
+        .course-head-courses {
+          display: inline-block;
+          float: left;
+
+          .course-head-course {
+            display: inline-block;
+            line-height: 24px;
+            padding: 0 10px;
+            border-radius: 12px;
+            border: 1px solid #fff;
+
+            &.active {
+              color: #0085e6;
+              border-color: #0085e6;
+            }
+          }
+        }
+
+        .course-btn {
+          float: right;
+        }
+      }
+    }
+
+    .course-body {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+      margin-bottom: 15px;
+      border-radius: 8px;
+      overflow: hidden;
+
+      .course-body-left {
+        width: 280px;
+        float: left;
+        color: #666;
+
+        .course-untiy-name {
+          float: left;
+        }
+
+        .course-body-untiy {
+          line-height: 20px;
+          padding: 15px 30px;
+          overflow: hidden;
+          height: 20px;
+
+          &:nth-child(2n + 2) {
+            background-color: #fff;
+          }
+        }
+
+        .course-untiy-imgs {
+          font-size: 0;
+          float: right;
+
+          .img {
+            width: 18px;
+            height: 18px;
+            border-radius: 50%;
+            background-color: #0085e6;
+            display: inline-block;
+            margin-left: 10px;
+          }
+        }
+      }
+
+      .course-body-center {
+        float: left;
+        width: 612px;
+
+        .course-body-class {
+          padding: 0 43px;
+          float: left;
+
+          .course-class-item {
+            color: #333;
+            font-size: 16px;
+            line-height: 22px;
+            margin-bottom: 20px;
+
+            .course-class-name {
+              margin-bottom: 11px;
+            }
+
+            .course-class-pro {
+              display: table-cell;
+              overflow: hidden;
+              text-align: center;
+              font-size: 12px;
+              width: 220px;
+
+              .course-pro-warp {
+                width: 180px;
+                height: 6px;
+                background-color: #e5e5e5;
+                float: left;
+                border-radius: 6px;
+                margin-top: 6px;
+
+                .course-pro-inner {
+                  height: 100%;
+                  border-radius: 6px;
+                  width: 71.42%;
+                  background-color: #0085e6;
+                }
+              }
+
+              .course-pro-test {
+                float: right;
+                line-height: 17px;
+
+                span {
+                  color: #0085e6;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .course-body-right {
+        width: 308px;
+        float: left;
+      }
     }
   }
 }
