--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -131,7 +131,7 @@
 }
 
 .xc-table-box {
-  margin: 15px 0 50px 0;
+  margin: 15px 0 75px 0;
 }
 
 .xc-table {
@@ -156,6 +156,15 @@
     font-weight: normal;
     position: relative;
   }
+
+.xc-table th .position {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      -webkit-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%);
+    }
 
 .xc-table th .table-switch {
       position: absolute;
@@ -232,6 +241,10 @@
 .xc-table tbody td .table-btn.red {
   background-color: rgba(255, 69, 72, 1);
   color: #fff;
+}
+
+.xc-table tbody td .table-img {
+        width: 28px;
 }
 
 .xc-table tbody tr:nth-child(2n+1) {
