--- a/src/less/main_xc.less
+++ b/src/less/main_xc.less
@@ -129,7 +129,7 @@
 }
 
 .xc-table-box {
-  margin: 15px 0 50px 0;
+  margin: 15px 0 75px 0;
 }
 
 .xc-table {
@@ -151,6 +151,14 @@
     padding: 15px 0;
     font-weight: normal;
     position: relative;
+
+    .position {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      transform: translate(-50%, -50%);
+    }
 
     .table-switch {
       position: absolute;
@@ -227,6 +235,10 @@
           background-color: rgba(255, 69, 72, 1);
           color: #fff;
         }
+      }
+
+      .table-img {
+        width: 28px;
       }
     }
 
