--- a/src/less/main_momo.less
+++ b/src/less/main_momo.less
@@ -579,6 +579,7 @@
   line-height: 40px;
   font-size: 14px;
   background: rgba(255, 255, 255, 1);
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
   border-radius: 4px;
 }
@@ -682,3 +683,102 @@
   margin: 0;
 }
 /* stylelint-enable */
+
+/* model box */
+.course_center_wrap{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.course_center{
+  width: 1000px;
+  height: 600px;
+  margin: 208px auto 0;
+  background:rgba(255, 255, 255, 1);
+  -webkit-box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.05);
+  box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.05);
+  border-radius:8px;
+}
+
+.change_course_nav{
+  width: 100%;
+  height: 55px;
+  border-bottom: 2px solid rgba(235, 235, 235, 1);
+}
+
+.change_course_nav>a{
+  display: block;
+  margin-left: 50px;
+  float: left;
+  font-size: 16px;
+  color:rgba(153, 153, 153, 1);
+  line-height: 55px;
+  width: 80px;
+  height: 55px;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.change_course_nav>.close{
+  display: block;
+  float: right;
+  width: 19px;
+  height: 55px;
+  margin-right: 30px;
+  background-image: url(../img/index/close.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  cursor: pointer;
+}
+
+.change_course_nav>a:hover{
+  color:rgba(0, 133, 230, 1);
+  border-bottom: 6px solid rgba(0, 133, 230, 1);
+  cursor: pointer;
+}
+
+.change_course_nav_list.active{
+  color:rgba(0, 133, 230, 1);
+  border-bottom: 6px solid rgba(0, 133, 230, 1);
+  cursor: pointer;
+}
+
+.change_course_details_table{
+  width: 944px;
+  background:rgba(255, 255, 255, 1);
+  padding: 10px 28px 0;
+}
+
+.change_course_details_table tr:nth-child(1){
+  border-radius:8px 8px 0 0;
+}
+
+.change_course_details_table tr:nth-child(odd){
+  background:rgba(250, 250, 251, 1);
+}
+
+.change_course_details_table th,.change_course_details_table td{
+  height: 50px;
+  min-width: 314px;
+  padding: 0;
+  text-align: center;
+  font-size: 14px;
+}
+
+.change_course_details_table td{
+  color:rgba(153,153,153,1);
+}
+
+.change_course_details_table{
+  display: none
+}
+
+.change_course_details_table.active{
+  display: block;
+}
