--- a/src/css/main_xc.css
+++ b/src/css/main_xc.css
@@ -130,6 +130,50 @@
   color: #0085e6;
 }
 
+.xc-pent {
+  background: rgba(255, 255, 255, 1);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+  margin-bottom: 15px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.xc-pent .pent-head {
+    font-size: 14px;
+    color: rgba(255, 255, 255, 1);
+    line-height: 28px;
+    padding: 11px 30px;
+    background-color: #0085e6;
+    overflow: hidden;
+  }
+
+.xc-pent .pent-head .pent-name {
+      float: left;
+      font-size: 20px;
+      font-weight: 600;
+      padding-right: 30px;
+      border-right: 1px solid rgba(88, 176, 241, 1);
+    }
+
+.xc-pent .pent-head .pent-name-small {
+      float: left;
+      padding-left: 30px;
+    }
+
+.xc-pent .pent-head .pent-close {
+      width: 28px;
+      float: right;
+      cursor: pointer;
+    }
+
+.xc-pent .pent-body {
+    padding: 30px;
+    min-height: 573px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+
 .xc-table-box {
   margin: 15px 0 75px 0;
 }
@@ -651,3 +695,194 @@
         width: 308px;
         float: left;
       }
+
+.xc-body .readText-main .readText-btns {
+      overflow: hidden;
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 20px;
+    }
+
+.xc-body .readText-main .readText-btns .readText-loop,
+      .xc-body .readText-main .readText-btns .readText-play {
+
+        width: 56px;
+        float: left;
+        text-align: center;
+        margin-right: 23px;
+        cursor: pointer;
+      }
+
+.xc-body .readText-main .readText-btns .readText-loop .btn-img, .xc-body .readText-main .readText-btns .readText-play .btn-img {
+          width: 50px;
+        }
+
+.xc-body .readText-main .readText-box {
+      font-size: 20px;
+      line-height: 30px;
+      font-weight: 600;
+    }
+
+.xc-body .readText-main .readText-box .active {
+        color: #0085e6;
+      }
+
+.xc-body .readText-sentence {
+    font-weight: 200;
+    padding: 170px 0 0 120px;
+  }
+
+.xc-body .readText-sentence .readText-listen {
+      font-size: 14px;
+      font-weight: 400;
+    }
+
+.xc-body .readText-sentence .readText-listen .readText-listen-img {
+        width: 46px;
+        margin-right: 20px;
+      }
+
+.readText-footer-box {
+  height: 80px;
+  background: rgba(255, 255, 255, 1);
+  -webkit-box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, .05);
+          box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, .05);
+  overflow: hidden;
+}
+
+.readText-footer-box .readText-footer {
+    padding-left: 40px;
+    position: relative;
+  }
+
+.readText-footer-box .readText-footer-img {
+    float: left;
+    width: 86px;
+    padding: 10px 0;
+  }
+
+.readText-footer-box .readText-footer-items {
+    float: left;
+    width: 108px;
+    line-height: 20px;
+    padding: 10px 0 10px 20px;
+    font-size: 14px;
+  }
+
+.readText-footer-box .readText-footer-items .time {
+      margin-left: 15px;
+      color: #333;
+    }
+
+.readText-footer-box .readText-pro {
+    float: left;
+    padding-top: 10px;
+    margin-left: 45px;
+  }
+
+.readText-footer-box .readText-pro .readText-pro-name {
+      width: 605px;
+      text-align: center;
+      font-size: 16px;
+      color: #333;
+      line-height: 22px;
+      font-weight: 600;
+      margin-bottom: 8px;
+    }
+
+.readText-footer-box .readText-pro .readText-pro-item {
+      float: left;
+      font-size: 12px;
+      line-height: 20px;
+      padding: 10px 0;
+      width: 184px;
+      position: relative
+    }
+
+.readText-footer-box .readText-pro .readText-pro-item::before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #ccc;
+  top: 0;
+  left: 20px;
+  z-index: 100;
+}
+
+.readText-footer-box .readText-pro .readText-pro-item::after {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 2px;
+  background-color: #ccc;
+  top: 3px;
+  left: -158px;
+  position: absolute;
+}
+
+.readText-footer-box .readText-pro .readText-pro-item:first-child::after {
+  display: none;
+}
+
+.readText-footer-box .readText-pro .readText-pro-item.active {
+  color: #0085e6;
+  font-weight: 600;
+}
+
+.readText-footer-box .readText-pro .readText-pro-item.active::before {
+  background-color: #0085e6;
+}
+
+.readText-footer-box .readText-pro .readText-pro-item.active::after {
+  background-color: #0085e6;
+}
+
+.readText-footer-box .readText-pro .readText-footer-btns {
+      width: 263px;
+      position: absolute;
+      right: 0;
+      top: 0;
+      text-align: center;
+      line-height: 30px;
+    }
+
+.readText-footer-box .readText-pro .readText-footer-btns a {
+        padding: 25px 0;
+        width: 100%;
+        color: #fff;
+        display: block;
+        font-weight: 400;
+        font-size: 20px;
+      }
+
+.readText-footer-box .readText-pro .readText-footer-btns .readText-footer-btn.next {
+        background-color: #0085e6;
+      }
+
+.readText-footer-box .readText-pro .readText-footer-btns .readText-footer-btnImg {
+        width: 30px;
+        margin-left: 25px;
+        vertical-align: top;
+        cursor: pointer;
+      }
+
+.readText-footer-box .readText-pro .readText-footer-btns.two .readText-footer-btn {
+          width: 50%;
+          float: left;
+}
+
+.readText-footer-box .readText-pro .readText-footer-btns.two .readText-footer-btnImg {
+          margin-left: 5px;
+}
+
+.readText-footer-box .readText-pro .readText-footer-btns.two .readText-footer-btn.prv a {
+            color: #999;
+          }
+
+.readText-footer-box .readText-pro .readText-footer-btns.two .readText-footer-btn.prv .readText-footer-btnImg {
+            margin-left: 0;
+            margin-right: 5px;
+          }
