--- a/src/less/main_wj.less
+++ b/src/less/main_wj.less
@@ -10,6 +10,10 @@
   clear: both;
 }
 
+.none {
+  display: none;
+}
+
 button {
   border: none;
 
@@ -652,6 +656,171 @@ button {
 }
 
 .body-oralpractice {
+  .word-left {
+    float: left;
+    width: 434px;
+    padding-bottom: 40px;
+
+    .word {
+      font-size: 62px;
+      color: #333;
+    }
+
+    .word-cue {
+      font-size: 30px;
+      color: #666;
+      margin-bottom: 26px;
+    }
+
+    .word-txt {
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 10px;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
+
+    .word-list {
+      color: #0085e6;
+      margin-right: 17px;
+    }
+  }
+
+  .opearte-right {
+    float: left;
+
+    .img-wp {
+      height: 120px;
+    }
+
+    .soundrecord-img {
+      width: 286px;
+    }
+
+    .soundrecord-txt {
+      font-size: 14px;
+      color: #0085e6;
+      text-align: center;
+    }
+
+    .soundanalyse-img {
+      float: left;
+      width: 52px;
+      height: 63px;
+      border: 1px solid red;
+      margin-right: 5px;
+    }
+
+    .soundanalyse-txt {
+      font-size: 14px;
+      color: #0085e6;
+      height: 63px;
+      line-height: 63px;
+    }
+
+    .soundresult-img {
+      width: 56px;
+      margin-right: 24px;
+      float: left;
+    }
+
+    .spundresult-txtwp {
+      float: left;
+      color: #ff4548;
+      font-size: 16px;
+
+      .score {
+        font-size: 30px;
+      }
+
+      .soundresult-txt {
+        font-size: 14px;
+        color: #666;
+      }
+    }
+
+    .sound-result,
+    .sound-analyse {
+      margin-left: 30px;
+    }
+  }
+
+  .btn-ul {
+    margin-left: 16px;
+
+    li {
+      float: left;
+      width: 80px;
+      text-align: center;
+
+      &:nth-of-type(1) {
+        a {
+          background: url('../img/playsound.png') no-repeat;
+          background-size: cover;
+        }
+      }
+
+      &:nth-of-type(2) {
+        a {
+          background: url('../img/speak.png') no-repeat;
+          background-size: cover;
+        }
+      }
+
+      &:nth-of-type(3) {
+        a {
+          background: url('../img/play.png') no-repeat;
+          background-size: cover;
+        }
+      }
+
+      &.active {
+        .btn-txt {
+          color: #0085e6;
+        }
+
+        &:nth-of-type(1) {
+          a {
+            background: url('../img/playsound_active.png') no-repeat;
+            background-size: cover;
+          }
+        }
+
+        &:nth-of-type(2) {
+          a {
+            background: url('../img/speak_active.png') no-repeat;
+            background-size: cover;
+          }
+        }
+
+        &:nth-of-type(3) {
+          a {
+            background: url('../img/play_active.png') no-repeat;
+            background-size: cover;
+          }
+        }
+      }
+
+      .btn-txt {
+        font-size: 14px;
+        color: #666;
+        text-align: center;
+      }
+
+      a {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        margin-bottom: 8px;
+      }
+    }
+  }
+}
+
+.body-oralpractice,
+.body-preview {
   .wrap {
     background: #fafafb;
   }
@@ -659,7 +828,6 @@ button {
   .main {
     width: 1200px;
     margin: 0 auto;
-    border: 1px solid red;
   }
 
   .page-title {
@@ -682,6 +850,11 @@ button {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
     border-radius: 8px;
     padding-top: 42px;
+  }
+
+  .practice-ct {
+    width: 720px;
+    margin: 0 auto;
   }
 
   .summary-wp {
@@ -766,128 +939,120 @@ button {
     }
   }
 
-  .practice-ct {
+  .progress-wp {
     width: 720px;
-    margin: 0 auto;
-  }
+    background: #ebebeb;
+    height: 6px;
+    border-radius: 3px;
+    margin-bottom: 27px;
 
-  .word-left {
-    float: left;
-    width: 434px;
-
-    .word {
-      font-size: 62px;
-      color: #333;
+    .progress-ct {
+      position: relative;
+      background: #0085e6;
+      width: 300px;
+      height: 6px;
+      border-radius: 3px;
     }
 
-    .word-cue {
-      font-size: 30px;
-      color: #666;
-      margin-bottom: 26px;
-    }
-
-    .word-txt {
-      font-size: 14px;
-      color: #666;
-      margin-bottom: 10px;
-
-      &:last-of-type {
-        margin-bottom: 0;
-      }
-    }
-
-    .word-list {
-      color: #0085e6;
-      margin-right: 17px;
-    }
-  }
-
-  .opearte-right {
-    float: left;
-
-    .img-wp {
-      height: 120px;
-    }
-
-    .soundrecord-img {
-      width: 286px;
-    }
-
-    .soundrecord-txt {
+    .percent {
       font-size: 14px;
       color: #0085e6;
-      text-align: center;
+      position: absolute;
+      right: -15px;
+      top: -20px;
     }
   }
 
-  .btn-ul {
-    margin-left: 16px;
+  .summary-ul {
+    padding-bottom: 30px;
 
     li {
       float: left;
-      width: 80px;
-      text-align: center;
+      color: #666;
+      font-size: 14px;
 
-      .btn-txt {
-        font-size: 14px;
-        color: #666;
-        text-align: center;
+      .txt {
+        color: #333;
+        margin-left: 6px;
       }
 
-      a {
-        display: inline-block;
-        width: 50px;
-        height: 50px;
-        margin-bottom: 8px;
+      &:last-of-type {
+        float: right;
       }
 
       &:nth-of-type(1) {
-        a {
-          background: url('../img/playsound.png') no-repeat;
-          background-size: cover;
-        }
+        margin-right: 53px;
       }
 
       &:nth-of-type(2) {
-        a {
-          background: url('../img/speak.png') no-repeat;
-          background-size: cover;
-        }
+        margin-right: 80px;
       }
+    }
 
-      &:nth-of-type(3) {
-        a {
-          background: url('../img/play.png') no-repeat;
-          background-size: cover;
-        }
-      }
+    .duration-img,
+    .newword-img,
+    .hourglass-img {
+      width: 19px;
+      margin-right: 4px;
+    }
+  }
 
-      &.active {
-        .btn-txt {
-          color: #0085e6;
-        }
+  .mr-10 {
+    margin-right: 10px;
+  }
+}
 
-        &:nth-of-type(1) {
-          a {
-            background: url('../img/playsound_active.png') no-repeat;
-            background-size: cover;
-          }
-        }
+.body-preview {
+  .perview-left {
+    float: left;
 
-        &:nth-of-type(2) {
-          a {
-            background: url('../img/speak_active.png') no-repeat;
-            background-size: cover;
-          }
-        }
+    .horn-wp {
+      height: 36px;
+      line-height: 36px;
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 50px;
+    }
 
-        &:nth-of-type(3) {
-          a {
-            background: url('../img/play_active.png') no-repeat;
-            background-size: cover;
-          }
-        }
-      }
+    .horn-a {
+      display: inline-block;
+      width: 42px;
+      height: 36px;
+      margin-right: 23px;
+      background: url('../img/horn_gery.png') no-repeat;
+      background-size: cover;
+    }
+
+    .horn-cue {
+      display: inline-block;
+      vertical-align: top;
+    }
+
+    .en-txt {
+      margin-bottom: 14px;
+      font-size: 30px;
+      color: #333;
+    }
+
+    .cn-txt {
+      font-size: 20px;
+      color: #666;
+    }
+  }
+
+  .preview-right {
+    float: right;
+
+    .next-img {
+      width: 64px;
+      margin-bottom: 6px;
+    }
+
+    .next-txt {
+      color: #0085e6;
+      font-size: 20px;
+      width: 64px;
+      text-align: center;
     }
   }
 }
