--- a/src/less/main_wj.less
+++ b/src/less/main_wj.less
@@ -1023,6 +1023,11 @@ button {
       background-size: cover;
     }
 
+    .horn-a-active {
+      background: url('../img/horn_active.png') no-repeat;
+      background-size: cover;
+    }
+
     .horn-cue {
       display: inline-block;
       vertical-align: top;
@@ -1043,6 +1048,10 @@ button {
   .preview-right {
     float: right;
 
+    .next-wp {
+      padding-top: 85px;
+    }
+
     .next-img {
       width: 64px;
       margin-bottom: 6px;
@@ -1054,5 +1063,60 @@ button {
       width: 64px;
       text-align: center;
     }
+
+    .konw-wp {
+      padding-top: 55px;
+    }
+
+    .know-txt {
+      width: 135px;
+      text-align: center;
+      color: #333;
+      font-size: 20px;
+      margin-bottom: 38px;
+    }
+
+    .yes-btn,
+    .no-btn {
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+    }
+
+    .yes-btn {
+      background: url('../img/yes_icon.png') no-repeat;
+      background-size: cover;
+      margin-right: 35px;
+    }
+
+    .no-btn {
+      background: url('../img/no_icon.png') no-repeat;
+      background-size: cover;
+    }
+
+    .correct-wp {
+      padding-top: 55px;
+
+      .correct-txt {
+        color: #333;
+        font-size: 20px;
+        margin-bottom: 38px;
+      }
+
+      .yes-btn {
+        background: url('../img/correct_icon.png') no-repeat;
+        background-size: cover;
+        margin: 0 35px 0 10px;
+      }
+  
+      .no-btn {
+        background: url('../img/fault_icon.png') no-repeat;
+        background-size: cover;
+      }
+    }
   }
+}
+
+.content-minheight {
+  min-height: 270px;
 }
